UX:; ensures others/usernames are aligned on left

--- a/assets/stylesheets/common/discourse-reactions.scss
+++ b/assets/stylesheets/common/discourse-reactions.scss
@@ -64,6 +64,7 @@ html.discourse-reactions-no-select {
         .username,
         .other-users {
           white-space: nowrap;
+          text-align: left;
         }
 
         .other-users {
